# gitsorted

./: Cargo.toml  Rocket.toml  cspell.json  main
src/: main.rs
templates/: index.html.tera
