[package]
name = "highlight-rust-pkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4.20"
octocrab = "0.32.0"
postgrest = "1.6.0"
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.4", features = ["tera"] }
serde = "1.0.190"
serde_json = "1.0.108"
sqlite = "0.31.1"

